Colour scheme changed for mobile
Mobile menu bar colour scheme changed.

--- a/css/responsivemobilemenu.css
+++ b/css/responsivemobilemenu.css
@@ -9,6 +9,7 @@
 	margin:0 auto !important;
 	text-align: center;
 	line-height:19px !important;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .rmm * {
