--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
 
 body{
 	font-family: 'Lato', sans-serif;
-	background:#FFF;
+	background:#FAFAFA;
 }
 
 
@@ -191,7 +191,7 @@ body{
 }
 .img-banner-info h3{
 	font-size:2.25rem;
-    font-weight: 300;
+    font-weight: normal;
 	line-height:1.3em;
 	margin:60px 0;
 }
