--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
 
 body{
 	font-family: 'Lato', sans-serif;
-	background:#FFF;
+	background: #fafafa;
 }
 
 
@@ -46,7 +46,7 @@ body{
 	width: 100%;
 	clear: both;
     position: relative;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: #fafafa;
 }
 img.logo {
 	width: 70px;
@@ -167,13 +167,13 @@ img.logo {
 	display: inline-block;
 }
 #nav .current a,.cssmenu > ul > li a:hover {
-	border-color:white;
+	border-color: #333333;
 }
 .cssmenu > ul > li > a {
-	color:white;
+	color:#333333;
 	display: block;
 	padding:12px 12px;
-	border-bottom:2px solid rgba(255, 255, 255, 0);
+	border-bottom:2px solid #fafafa;
 	font-size: 1.2rem;
     font-weight: bold;
 	-webkit-transition: all 0.3s ease-out;
