--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,10 @@ img.logo {
 	display: inline-block;
 }
 #nav .current a,.cssmenu > ul > li a:hover {
-	border-color: #333333;
+	border-color: rgb(100, 100, 100);
 }
 .cssmenu > ul > li > a {
-	color:#333333;
+	color:rgb(100, 100, 100);
 	display: block;
 	padding:12px 12px;
 	border-bottom:2px solid #fafafa;
