--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,48 @@ body{
 	background: #fafafa;
 }
 
+/* Popup */
+
+div#blanket {
+	display:block;
+    background-color: black;
+    opacity: 0.8;
+    position: fixed;
+    z-index: 90001;
+    width: 100%;
+	height: 100%;
+}
+
+div#popupdiv {
+    background-color: rgba(255, 255, 255, 0.9);
+    position: fixed;
+    border: 1px solid black;
+    display: block;
+    width: 220px;
+    height: 240px;
+    left: 50%;
+    top: 50%;
+    margin-left: -110px;
+    margin-top: -120px;
+    z-index: 90003;
+}
+
+@media screen and (min-width: 500px){
+  #popup{ display: none; }  /* show it on large screens */
+}
+
+img#deal {
+    padding: 5px;
+    width: inherit;
+}
+
+img#getapp {
+	width: 180px;
+    height: 50px;
+	margin-left: 20px;
+    border: 0px solid black;
+	border-radius: 8px;
+}
 
 .wrap{
     margin:0 auto;
